# licenseseat-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  vcpkg.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cmake/: licenseseatConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp
include/licenseseat/: crypto.hpp  device.hpp  events.hpp  http.hpp  json.hpp  licenseseat.hpp  storage.hpp
integrations/juce/: README.md
integrations/juce/Source/: LicenseSeatJuce.h  LicenseSeatJuceStandalone.h
integrations/unreal/: README.md
integrations/unreal/LicenseSeat/: LicenseSeat.uplugin
integrations/unreal/LicenseSeat/Source/LicenseSeat/: LicenseSeat.Build.cs
integrations/unreal/LicenseSeat/Source/LicenseSeat/Private/: LicenseSeatModule.cpp  LicenseSeatSubsystem.cpp
integrations/unreal/LicenseSeat/Source/LicenseSeat/Public/: LicenseSeatModule.h  LicenseSeatSubsystem.h  LicenseSeatTypes.h
scripts/: amalgamate.py
src/: client.cpp  crypto.cpp  device.cpp  http.cpp  storage.cpp
tests/: CMakeLists.txt  crypto_stress_test.cpp  integration_test.cpp  scenario_test.cpp  test_client.cpp  test_crypto.cpp  test_device.cpp  test_events.cpp  test_http.cpp  test_json.cpp  test_license.cpp  test_result.cpp  test_special_packaging.cpp  test_storage.cpp
